2003-01-23  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* include/am_defs.h: make sure _P1003_1B_VISIBLE is defined when
	including <sys/mman.h>, to expose mlockall() constants on Darwin

2003-01-10  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/test-amd.{misc,conf}: simple amd.conf and amd.misc
	(map) files for testing basic amd functionality such as whether it
	can mount its own mount NFS points.

2002-12-28  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/srvr_nfs.c (start_nfs_pings): don't set FSF_PINGING if
	pings are disabled

	* libamu/xdr_func.c (xdr_ftype): use a local enum_t variable
	instead of casting the pointer to (enum_t *)
	(xdr_mountstat3): ditto
	(xdr_nfsstat): ditto

	* libamu/misc_rpc.c (make_rpc_packet): fix make_rpc_packet() on
	64-bit big-endian platforms, bug report from Bill Fenner
	<fenner@research.att.com>

	* configure.in: increase library patchlevel

	* libamu/xutil.c (amu_release_controlling_tty): close and reopen
	file descriptors 0,1,2 before calling setsid()

2002-12-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* updated copyright year to 2003 on all files

2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* rename "aux/" subdir into "m4/" so as to avoid problems with
	MS-DOS systems (where "AUX" is a reserved name).  This required
	fixing numerous files.

2002-12-10  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* configure.in: don't check for bad hasmntopt() function if
	hasmntopt() doesn't exist on the system, because we will replace
	it with our own version anyway.

	* conf/transp/transp_sockets.c (amu_get_myaddress): use "%lx" in
	dlog because htonl() returns a u_long.

2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* include/am_defs.h: use system's hasmntopt() only if it is found
	and it is not buggy.

	* libamu/hasmntopt.c (nextmntopt): isspace() takes an int, not a
	char.

	* amd/am_ops.c, amd/amfs_auto.c, amd/autil.c, amd/nfs_subr.c,
	amd/ops_cdfs.c, amd/ops_nfs.c, amd/srvr_nfs.c, libamu/hasmntopt.c,